--- a/week03/3disc-racer-game.qmd
+++ b/week03/3disc-racer-game.qmd
@@ -13,7 +13,7 @@ format:
 library(countdown)
 ```
 
-# {background-image="slides-figures/start_line.jpg" background-position="right" background-size="contain"}
+# {background-image="slides-figures/start_line.jpg" background-position="middle" background-size="contain"}
 
 # Hi there!
 . . .
@@ -105,7 +105,7 @@ Let's start by taking a quick look at it: [https://www.stat2games.sites.grinnell
 
 [thoughts: only up to 5 observations per team] 
 
-#  {background-image="slides-figures/finish_line.jpg" background-position="right" background-size="contain"}
+#  {background-image="slides-figures/finish_line.jpg" background-position="middle" background-size="contain"}
 
 
 
